# modechatbox

./: .dockerignore  .env.example  .gitignore  CHATBOX_LAUNCH_CHECKLIST.md  CHATBOX_MVP_RULES.md  CLIENT_DEMO_SCRIPT.md  CLIENT_REVIEW_CHECKLIST.md  Dockerfile  chatbox-intents.nl.json  conftest.py  pyproject.toml  render.yaml  requirements.txt
backend/: __init__.py  app.py  config.py  handoff.py  mailer.py
chatbox/: chatbox.css  chatbox.js  embed.js  handoff.js  intents.js  session-store.js
demo/: index.html
scripts/: activate.sh  dev_server.py  install_python.sh  python_env.sh  setup_venv.sh
tests/: test_handoff.py  test_intents.py
